--- a/login.html
+++ b/login.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-     <div class="col-md-6 login-form-2">
+     <div class="login-form-2">
         <h3>Login for Form 2</h3>
         <form>
-            <div class="form-group">
-                 <input type="text" class="form-control" placeholder="Your Email *" value="" />
+            <div class="email">
+                 <input type="text" class="emailfill" placeholder="Your Email *" value="" />
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Your Password *" value="" />
+            <div class="password">
+                <input type="password" class="passwordfill" placeholder="Your Password *" value="" />
             </div>
-            <div class="form-group">
+            <div class="submit">
                 <input type="submit" class="btnSubmit" value="Login" />
             </div>
-            <div class="form-group">
-
-                <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
+            <div class="forget">
+                <a href="#" class="forgetPwd" value="Login">Forget Password?</a>
             </div>
         </form>
     </div>
