--- a/tambahdatatabungan.html
+++ b/tambahdatatabungan.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tambahdatauser</title>
+    <!-- css -->
     <link rel="stylesheet" href="tambahdatatabungan.css">
+
+    <!-- font goole -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Quicksand:wght@600;700&display=swap" rel="stylesheet">
     <!--Icon-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,37 +28,38 @@
         <ul>
           <a href=""><p > <i class="fa-solid fa-house"></i>Dasboard</p></a>  
            <a href=""><p><i class="fa-solid fa-user"></i>Admin</p> </a>
-           <a href=""><p><i class="fa-solid fa-box"></i>Produk</p></a>
+           <a href=""><p><i class="fa-solid fa-box"></i>Data Pemasukan</p></a>
            <a href=""><p><i class="fa-solid fa-database"></i>Data Barang</p></a>
         </ul>
     </div>
     </div>
     <div class="container-2">
         <form action="" method="POST">
-            <div class="tambah-user">
+            <div class="tambah-berita">
                 <h3>Tambah Data Tabungan</h3>
             </div>
-            <div class="data">
+            <div class="data1">
                 <label>NO ID</label>
                 <input required="required" type="number" name="nomer">
-            <div class="data">
+            <div class="data2">
                 <label>TANGGAL</label>
                <input required="required" type="date" name="nama">
             </div>
-            <div class="data">
+            <div class="data3">
                 <label>NAMA</label>
                 <input required="required" type="text" name="berita">
             </div>
-            <div class="data">
+            <div class="data4">
                 <label>PEMASUKAN</label>
                 <input required="required" type="number" name="tempat_kejadian">
             </div>
         </div>
-            <div class="simpan-berita">
-                <input type="submit" name="simpan" value="simpan">
+           
             </div>
         </form>
-    </div>
+    </div> 
+    <div class="simpan-berita">
+                <input type="submit" name="simpan" value="simpan">
 
 </body>
 </html>
