--- a/tambahdatauser.html
+++ b/tambahdatauser.html
@@ -35,22 +35,22 @@
     <div class="container-2">
         <form action="simpan-berita.php" method="POST">
             <div class="tambah-berita">
-                <h3>Tambah Barang</h3>
+                <h3>Data User</h3>
             </div>
             <div class="data1">
-               <label> ID Barang :</label>
+               <label> ID User :</label>
                 <input  required="required" type="text" name="nomer">
             
             <div class="data2">
-                <label>Nama Barang  :</label>
+                <label>Nama User  :</label>
                 <input  required="required" type="text" name="gambar">
             </div>
             <div class="data3">
-                <label>Harga Barang :</label>
+                <label>Tanggal Lahir :</label>
                 <input  required="required" type="text" name="berita">
             </div>
             <div class="data4">
-                <label>Stok Barang :</label>
+                <label>Usia :</label>
                 <input  required="required" type="text" name="tempat_kejadian">
             </div>
       
